--- a/src/components/css/Technology.module.css
+++ b/src/components/css/Technology.module.css
@@ -115,7 +115,7 @@
   .wrapper > h2 {
     order: -1;
     margin-top: 4em;
-    z-index: 2;
+    z-index: 1;
   }
   
   .desc_btn_wrapper {
